chore: Fixed PMD errors